<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XY</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Hinzufügen</string>
    <string name="save_list">Speichern</string>
    <string name="btn_list_create_name">Einkaufsliste erstellen</string>
    <string name="btn_list_load_name">Einkaufsliste</string>
    <string name="btn_database_browse_name">Produktliste</string>
    <string name="dialog_product_name">Produkt:</string>
    <string name="dialog_product_description">Beschreibung:</string>
    <string name="dialog_product_price">Preis:</string>
    <string name="dialog_product_filename">Dateiname:</string>
    <string name="okay">O.K.</string>
    <string name="cancel">Abbrechen</string>
    <string name="add">Hinzufügen</string>
    <string name="delete">Löschen</string>
    <string name="edit">Bearbeiten</string>
    <string name="version">2</string>
    <string name="dbname">Produkte</string>
    <string name="search">Suche...</string>
    <string name="search_reset">X</string>
    <string name="action_forward">Vor</string>
    <string name="action_back">Zurück</string>
    <string name="product_name">Produkt</string>
	<string-array name="create">
        <item>
            create table Produkte(
            id integer primary key autoincrement,
            Produkt varchar(20) not null,
            Beschreibung varchar(50),
            Preis integer
            )
        </item>
    </string-array>
    <string-array name="drop">
        <item>
            drop table if exists Produkte
        </item>
    </string-array>
</resources>
