<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_dialog_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_product_name" />

   <EditText
        android:id="@+id/et_dialog_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

    </EditText>

    <TextView
        android:id="@+id/tv_dialog_product_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_product_description" />

    <EditText
        android:id="@+id/et_dialog_product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.35"
        android:ems="10" />

    <TextView
        android:id="@+id/tv_dialog_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_product_price" />

    <EditText
        android:id="@+id/et_dialog_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_dialog_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/okay" />
    </LinearLayout>

</LinearLayout>